# annotation-graph

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  EdgeInfo.h  GraphProcessor.cpp  GraphProcessor.h  NodeInfo.h  Timer.h  Utils.h  main.cpp
src/py/: PyGraph.cpp
test_files/: test.json
